--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,23 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "setup": "node quick-setup.js",
+    "migrate": "node migrate.js",
+    "quick": "node quick-setup.js && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
+    "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^6.11.2",
+    "express-session": "^1.18.1",
     "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
     "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.1",
