--- a/backend/package.json
+++ b/backend/package.json
@@ -6,38 +6,46 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "setup": "node quick-setup.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:security": "jest tests/security.test.js",
     "migrate": "node migrate.js",
-    "quick": "node quick-setup.js && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "setup": "node setup.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.15.0",
-    "bcryptjs": "^3.0.2",
+    "axios": "^1.10.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-mongo": "^5.1.0",
-    "cookie-parser": "^1.4.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "express-rate-limit": "^6.11.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
-    "helmet": "^7.2.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mammoth": "^1.9.1",
-    "mongoose": "^7.8.7",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "sharp": "^0.32.6"
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "keywords": [
     "ai",
     "assistant",
     "reminders",
-    "documents",
-    "chat"
+    "nodejs",
+    "express",
+    "mongodb"
   ],
   "author": "Your Name",
   "license": "MIT"
